[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Dungeon Ruins Tileset/Slime/idle.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/Dungeon Ruins Tileset/Slime/hop.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 205, 32, 41, 16 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 64, 16 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 32, 64, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "squashed",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "crawl",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5.37953, 3.71626 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4.73117, 1.55863 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 6.58361, 2.39223 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "crawl"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.185244, 3.73221 )
shape = SubResource( 5 )

[node name="floor_checker" type="RayCast2D" parent="."]
position = Vector2( 0, 0.185 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 3

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( -0.185246, -1.94506 )
shape = SubResource( 7 )

[node name="sides_checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2147483649

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( -0.0926208, 2.96391 )
shape = SubResource( 8 )
[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
